--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,13 @@ h1, h2, h3, h4, h5, h6 {
     color: #ffffff;
 }
 
+/* Fix for H1UserAgentFontSizeInSection deprecation warning */
+:where(h1) {
+    margin-block: 0.67em;
+    font-size: 2em;
+    font-weight: 700;
+}
+
 h1 {
     font-size: clamp(2.5rem, 5vw, 4rem);
     font-weight: 700;
